--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -215,4 +215,150 @@
   year={1995},
   doi={10.1080/01621459.1995.10476572}
 }
-
+@article{cox_1979,
+  title={On sampling and the estimation of rare errors},
+  author={Cox, D. R. and Snell, E. J.},
+  journal={Biometrika},
+  volume={66},
+  number={1},
+  pages={125--132},
+  year={1979},
+  doi={10.1093/biomet/66.1.125}
+}
+@article{derks_2021c,
+  title={JASP for Audit: Bayesian Tools for the Auditing Practice},
+  author={Derks, Koen and de Swart, Jacco and Wagenmakers, Eric-Jan and Wille, Joost and Wetzels, Ruud},
+  journal={Journal of Open Source Software},
+  volume={6},
+  number={68},
+  pages={2733},
+  year={2021},
+  doi={10.21105/joss.02733}
+}
+@article{dworin_1984,
+  title={Dollar-unit sampling for accounts receivable and inventory},
+  author={Dworin, L. D. and Grimlund, R. A.},
+  journal={The Accounting Review},
+  volume={59},
+  number={2},
+  pages={218--241},
+  year={1984},
+  url={https://www.jstor.org/stable/247296}
+}
+@article{dyer_1993,
+  title={On the choice of the prior distribution in hypergeometric sampling},
+  author={Dyer, David and Pierce, Richard L.},
+  journal={Communications in Statistics - Theory and Methods},
+  volume={22},
+  number={8},
+  pages={2125--2146},
+  year={1993},
+  doi={10.1080/03610929308831139}
+}
+@book{iaasb_2018,
+  title={Handbook of international quality control, auditing review, other assurance, and related services pronouncements (Vol. I)},
+  organization={International Auditing and Assurance Standards Board (IAASB)},
+  year={2018},
+  publisher={International Federation of Accountants},
+  address={New York}
+}
+@book{meikle_1972,
+  title={Statistical Sampling in an Audit Context},
+  author={Meikle, G. R.},
+  year={1972},
+  organization={Canadian Institute of Chartered Accountants}
+}
+@article{pap_1996,
+  title={On the asymptotic behaviour of the Stringer bound},
+  author={Pap, G. and van Zuijlen, M. C.},
+  journal={Statistica Neerlandica},
+  volume={50},
+  number={3},
+  pages={367--389},
+  year={1996},
+  doi={10.1111/j.1467-9574.1996.tb01503.x}
+}
+@article{rietveld_1978,
+  title={De zeefmethode als selectiemethode voor statistische steekproeven in de controlepraktijk (1)},
+  author={Rietveld, C.},
+  journal={Compact: Computer en Accountant},
+  volume={15},
+  pages={2--11},
+  year={1978}
+}
+@article{rohrbach_1993,
+  title={Variance augmentation to achieve nominal coverage probability in sampling from audit populations},
+  author={Rohrbach, Kenneth J.},
+  journal={Auditing: A Journal of Practice \& Theory},
+  volume={12},
+  number={2},
+  pages={79--97},
+  year={1993}
+}
+@book{steele_1992,
+  title={Audit Risk and Audit Evidence: The Bayesian Approach to Statistical Auditing},
+  author={Steele, Andrew},
+  year={1992},
+  publisher={Academic Press},
+  address={San Diego}
+}
+@phdthesis{talens_2005,
+  title={Statistical Auditing and the AOQL-method},
+  author={Talens, E.},
+  school={University of Groningen},
+  address={Groningen},
+  year={2005},
+  url={https://research.rug.nl/en/publications/statistical-auditing-and-the-aoql-method}
+}
+@book{touw_2011,
+  title={Statistiek voor Audit en Controlling},
+  author={Touw, Paul and Hoogduin, Lex},
+  year={2011},
+  publisher={Boom uitgevers},
+  address={Amsterdam}
+}
+@article{weiler_1965,
+  title={The use of incomplete beta functions for prior distributions in binomial sampling},
+  author={Weiler, H.},
+  journal={Technometrics},
+  volume={7},
+  number={3},
+  pages={335--347},
+  year={1965},
+  doi={10.1080/00401706.1965.10490267}
+}
+@Manual{prompers_2019,
+  title = {MUS: Monetary Unit Sampling and Estimation Methods, Widely Used in Auditing},
+  author = {Henning Prömpers and André Guimarães},
+  year = {2019},
+  note = {R package version 0.1.6},
+  url = {https://CRAN.R-project.org/package=MUS},
+}
+@Manual{manitz_2021,
+  title = {samplingbook: Survey Sampling Procedures},
+  author = {Juliane Manitz and Mark Hempelmann and Goeran Kauermann and Helmut Kuechenhoff and Shuai Shao and Cornelia Oberhauser and Nina Westerheide and Manuel Wiesenfarth},
+  year = {2021},
+  note = {R package version 1.2.4},
+  url = {https://CRAN.R-project.org/package=samplingbook},
+}
+@Manual{cinelli_2018,
+  title = {benford.analysis: Benford Analysis for Data Validation and Forensic Analytics},
+  author = {Carlos Cinelli},
+  year = {2018},
+  note = {R package version 0.1.5},
+  url = {https://CRAN.R-project.org/package=benford.analysis},
+}
+@Manual{joenssen_2015,
+  title = {BenfordTests: Statistical Tests for Evaluating Conformity to Benford's Law},
+  author = {Dieter William Joenssen},
+  year = {2015},
+  note = {R package version 1.2.0},
+  url = {https://CRAN.R-project.org/package=BenfordTests},
+}
+@Manual{stephane_2020,
+  title = {BeyondBenford: Compare the Goodness of Fit of Benford's and Blondeau Da Silva's Digit Distributions to a Given Dataset},
+  author = {Blondeau Da Silva Stephane},
+  year = {2020},
+  note = {R package version 1.4},
+  url = {https://CRAN.R-project.org/package=BeyondBenford},
+}
