--- a/vignettes/data-auditing.Rmd
+++ b/vignettes/data-auditing.Rmd
@@ -15,6 +15,8 @@ vignette: >
   %\VignetteKeywords{digit, tests, Bayesian}
   %\VignettePackage{jfa}
   %\VignetteEncoding{UTF-8}
+nocite: |
+  @cinelli_2018, @joenssen_2015, @stephane_2020
 ---
 
 ```{r, include = FALSE}
