--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -257,9 +257,23 @@
 }
 @book{iaasb_2018,
   title={Handbook of international quality control, auditing review, other assurance, and related services pronouncements (Vol. I)},
-  organization={International Auditing and Assurance Standards Board (IAASB)},
+  author={{International Auditing and Assurance Standards Board ({IAASB})}},
   year={2018},
-  publisher={International Federation of Accountants},
+  publisher={{International Federation of Accountants}},
+  address={New York}
+}
+@book{aicpa_2021,
+  title={Clarified Statements on Auditing Standards},
+  author={{American Institute of Certified Public Accountants ({AICPA})}},
+  year={2021},
+  publisher={{American Institute of Certified Public Accountants ({AICPA})}},
+  address={New York}
+}
+@book{pcaob_2020,
+  title={Auditing Standards},
+  author={{Public Company Accounting Oversight Board ({PCAOB})}},
+  year={2020},
+  publisher={{Public Company Accounting Oversight Board ({PCAOB})}},
   address={New York}
 }
 @book{meikle_1972,
