--- a/vignettes/data-auditing.Rmd
+++ b/vignettes/data-auditing.Rmd
@@ -27,18 +27,22 @@ library(jfa)
 
 Welcome to the 'Data auditing' vignette of the **jfa** package. Here you can
 find a simple explanation of the functions in the package that facilitate data
-auditing. For more detailed explanations of each function, read the other
-vignettes on the [package website](https://koenderks.github.io/jfa/).
+auditing. Specifically, the functions in this section implement techniques to
+test the distribution of (leading) digits against a reference distribution
+(e.g., Benford's law) and techniques to assess whether values are repeated more
+often than expected. The **jfa** package enables users to create a prior
+probability distribution to perform Bayesian data auditing using these
+functions.
 
 ## Functions and intended usage
 
 Below you can find an explanation of the available data auditing functions in
 **jfa**.
 
-- [`digit_test()`](#test-digit-distributions-with-digit-test)
-- [`repeated_test()`](#test-for-repeated-values-with-repeated-test)
+- [`digit_test()`](#testing-digit-distributions)
+- [`repeated_test()`](#testing-for-repeated-values)
 
-### Test digit distributions with `digit_test()`
+### Testing digit distributions
 
 The function `digit_test()` takes a vector of numeric values, extract the
 requested digits, and compares the frequencies of these digits to a reference
@@ -72,7 +76,7 @@ frequencies under Benford's law using the code below.
 digit_test(sinoForest[["value"]], check = "first", reference = "benford")
 ```
 
-### Test for repeated values with `repeated_test()`
+### Testing for repeated values
 
 The function `repeated_test()` analyzes the frequency with which values get
 repeated within a set of numbers. Unlike Benford's law, and its generalizations,
@@ -89,9 +93,9 @@ In this example, we analyze a data set from a (retracted) paper that describes
 three experiments run in Chinese factories, where workers were nudged to use
 more hand-sanitizer. These data were shown to exhibited two classic markers of
 data tampering: impossibly similar means and the uneven distribution of last
-digits [@yu_2018]. We can use the `rv.test()` function to test if these data
-also contain a greater amount of repeated values than expected if the data were
-not tampered with.
+digits [@yu_2018]. We can use the `repeated.test()` function to test if these
+data also contain a greater amount of repeated values than expected if the data
+were not tampered with.
 
 ```{r}
 # Inspect last two digits for repeated values
